# butte

./: .envrc  Cargo.toml  README.md  rustfmt.toml  shell.nix
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml
butte/: Cargo.toml
butte-build/: Cargo.toml
butte-build/src/: codegen.rs  compile.rs  lib.rs  macros.rs  main.rs  parser.rs  parser_macros.rs  types.rs
butte-build/src/ast/: mod.rs  parser.rs  parser_macros.rs  types.rs
butte-build/src/codegen/: mod.rs
butte-build/src/codegen/tests/: mod.rs
butte-build/src/codegen/tests/expected/: test_table_simple.rs
butte-build/src/ir/: keywords.rs  mod.rs  transform.rs  types.rs
butte-build/src/parse/: mod.rs  parser.rs  parser_macros.rs
butte-examples/: Cargo.toml  build.rs
butte-examples/fbs/: array.fbs  default_value.fbs
butte-examples/fbs/greeter/: greeter.fbs
butte-examples/src/greeter/: greeter.rs
butte-examples/tests/: array.rs  cli.rs  default_value.rs
butte-flatbuffers/: Cargo.toml
butte-flatbuffers/src/: builder.rs  primitives.rs  push.rs  table.rs  vector.rs  vtable.rs  vtable_writer.rs
butte/src/: builder.rs  codegen.rs  compile.rs  endian_scalar.rs  error.rs  follow.rs  lib.rs  macros.rs  main.rs  parser.rs  parser_macros.rs  primitives.rs  table.rs  types.rs  vector.rs  vtable.rs  vtable_writer.rs
src/: parser.rs  types.rs
