[package]
name = "butte"
version = "0.1.0"
authors = ["Phillip Cloud <cloud@standard.ai>"]
description = "A Rust implementation of flatbuffers"
license = "MIT"
repository = "https://github.com/flatbutte/butte"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexf-parse = "0.1.0"
nom = { version = "5.0.1", features = ["regexp"] }
typed-builder = "0.3.0"
