[package]
name = "butte-build"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
description = "A Rust implementation of flatbuffers"
license = "MIT"
repository = "https://github.com/butte-rs/butte"
readme = "README.md"
edition = "2018"
keywords = [
    "flatbuffers",
    "flatbuffer",
    "codegen",
    "data",
    "performance",
    "parsing",
    "encoding",
    "encode",
    "decoding",
    "decode",
    "serialization",
    "serialize",
    "deserialization",
    "deserialize",
    "rpc",
    "grpc",
    "service",
]
categories = ["data-structures", "encoding", "parser-implementations"]

[[bin]]
name = "butte"
path = "src/main.rs"

[dependencies]
# local dependencies
butte = { path = "../butte" }

anyhow = "1.0.26"
derive_more = { version = "0.99.3", features = ["from", "as_ref"] }
heck = "0.3.1"
hexf-parse = "0.1.0"
itertools = "0.9.0"
nom = { version = "5.1.1", features = ["regexp"] }
proc-macro2 = "1.0.9"
quote = "1.0.3"
structopt = "0.3.11"
syn = "1.0.16"
typed-builder = "0.7.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
