[package]
name = "butte-examples"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
description = "Examples of how to use Butte"
license = "MIT"
repository = "https://github.com/butte-rs/butte"
edition = "2018"
keywords = ["examples", "flatbuffers", "flatbuffer", "codegen"]

[[bin]]
name = "greeter"
path = "src/greeter/greeter.rs"

[dependencies]
anyhow = "1.0.19"
butte = { path = "../butte" }
flatbuffers = { package = "butte-flatbuffers", path = "../butte-flatbuffers" }

[build-dependencies]
anyhow = "1.0.19"
butte = { path = "../butte" }

[dev-dependencies]
anyhow = "1.0.19"
assert_cmd = "0.11.1"
