[package]
name = "butte-examples"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
description = "Examples of how to use Butte"
license = "MIT"
repository = "https://github.com/butte-rs/butte"
edition = "2018"
keywords = ["examples", "flatbuffers", "flatbuffer", "codegen"]

[[bin]]
name = "greeter"
path = "src/greeter/greeter.rs"

[dependencies]
anyhow = "1.0.19"
butte-build = { path = "../butte-build" }
butte = { path = "../butte" }

[build-dependencies]
anyhow = "1.0.19"
butte-build = { path = "../butte-build" }

[dev-dependencies]
anyhow = "1.0.19"
assert_cmd = "0.11.1"
